post: swift basic #2

--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ locale                   : "en-US"
 title                    : "To the C"
 title_separator          : "-"
 name                     : "Cory Kim"
-description              : "To be a creative iOS developer."
+description              : "아름다운 앱을 만드는게 행복한 iOS 개발자"
 url                      : "https://corykim0829.github.io"
 baseurl                  : ""
 repository               : "corykim0829/corykim0829.github.io"
