--- a/_config.yml
+++ b/_config.yml
@@ -107,7 +107,7 @@ analytics:
 # Site Author
 author:
   name             : "Cory Kim"
-  avatar           : "/assets/images/profile-img1.png"
+  avatar           : "/assets/images/profile-img2.jpeg"
   bio              : "디자인을 사랑하는 iOS 개발자"
   location         : "South Korea"
   email            : "corykim0829@gmail.com"
